openshift/configs/dev/deployments.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/vcs-ref: netcore3.2
    app.openshift.io/vcs-uri: 'https://github.com/gditrani269/WebApplication1.git'
    deployment.kubernetes.io/revision: '7'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"justdoit:latest","namespace":"ser"},"fieldPath":"spec.template.spec.containers[?(@.name==\"justdoit\")].image","pause":"false"}]
    openshift.io/generated-by: OpenShiftWebConsole
  selfLink: /apis/apps/v1/namespaces/ser/deployments/justdoit
  resourceVersion: '418875306'
  name: justdoit
  uid: 7cdf4ae8-9889-44cb-a626-d00179df65f6
  creationTimestamp: '2020-07-10T00:32:08Z'
  generation: 7
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: apps/v1
      time: '2020-07-10T00:32:08Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:alpha.image.policy.openshift.io/resolve-names': {}
            'f:app.openshift.io/vcs-ref': {}
            'f:app.openshift.io/vcs-uri': {}
            'f:image.openshift.io/triggers': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:progressDeadlineSeconds': {}
          'f:replicas': {}
          'f:revisionHistoryLimit': {}
          'f:selector':
            'f:matchLabels':
              .: {}
              'f:app': {}
          'f:strategy':
            'f:rollingUpdate':
              .: {}
              'f:maxSurge': {}
              'f:maxUnavailable': {}
            'f:type': {}
          'f:template':
            'f:metadata':
              'f:labels':
                .: {}
                'f:app': {}
                'f:deploymentconfig': {}
            'f:spec':
              'f:containers':
                'k:{"name":"justdoit"}':
                  .: {}
                  'f:imagePullPolicy': {}
                  'f:name': {}
                  'f:ports':
                    .: {}
                    'k:{"containerPort":8080,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                  'f:resources': {}
                  'f:terminationMessagePath': {}
                  'f:terminationMessagePolicy': {}
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
    - manager: openshift-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2020-07-10T06:18:07Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:template':
            'f:spec':
              'f:containers':
                'k:{"name":"justdoit"}':
                  'f:image': {}
    - manager: kube-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2020-07-10T14:44:08Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            'f:deployment.kubernetes.io/revision': {}
        'f:status':
          'f:availableReplicas': {}
          'f:conditions':
            .: {}
            'k:{"type":"Available"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Progressing"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
          'f:observedGeneration': {}
          'f:readyReplicas': {}
          'f:replicas': {}
          'f:updatedReplicas': {}
  namespace: ser
  labels:
    app: justdoit
    app.kubernetes.io/component: justdoit
    app.kubernetes.io/instance: justdoit
    app.kubernetes.io/name: dotnet
    app.kubernetes.io/part-of: dotnet-app
    app.openshift.io/runtime: dotnet
    app.openshift.io/runtime-version: '2.2'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: justdoit
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: justdoit
        deploymentconfig: justdoit
    spec:
      containers:
        - name: justdoit
          image: >-
            image-registry.openshift-image-registry.svc:5000/ser/justdoit@sha256:9f51d6622cdab881a837f2926160487d9ca6387bf415bd2873e4c5e83564d0e5
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 7
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
  conditions:
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2020-07-10T06:18:21Z'
      lastTransitionTime: '2020-07-10T00:32:08Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "justdoit-8475bd4985" has successfully progressed.
    - type: Available
      status: 'True'
      lastUpdateTime: '2020-07-10T14:44:08Z'
      lastTransitionTime: '2020-07-10T14:44:08Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
