openshift/configs/dev/service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    app.openshift.io/vcs-ref: netcore3.2
    app.openshift.io/vcs-uri: 'https://github.com/gditrani269/WebApplication1.git'
    openshift.io/generated-by: OpenShiftWebConsole
  selfLink: /api/v1/namespaces/ser/services/justdoit
  resourceVersion: '418190170'
  name: justdoit
  uid: dca08ad8-aa84-47f8-878f-ac91389e5eba
  creationTimestamp: '2020-07-10T00:32:08Z'
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: v1
      time: '2020-07-10T00:32:08Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:app.openshift.io/vcs-ref': {}
            'f:app.openshift.io/vcs-uri': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:ports':
            .: {}
            'k:{"port":8080,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector':
            .: {}
            'f:app': {}
            'f:deploymentconfig': {}
          'f:sessionAffinity': {}
          'f:type': {}
  namespace: ser
  labels:
    app: justdoit
    app.kubernetes.io/component: justdoit
    app.kubernetes.io/instance: justdoit
    app.kubernetes.io/name: dotnet
    app.kubernetes.io/part-of: dotnet-app
    app.openshift.io/runtime: dotnet
    app.openshift.io/runtime-version: '2.2'
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: justdoit
    deploymentconfig: justdoit
  clusterIP: 172.30.48.10
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
